--- a/.prettierignore
+++ b/.prettierignore
@@ -1,4 +1,21 @@
 # Package Managers
 package-lock.json
-pnpm-lock.yaml
-yarn.lock
+node_modules
+
+# Output
+.output
+/.svelte-kit
+/build
+
+# OS
+.DS_Store
+
+# Env
+.env
+.env.*
+!.env.example
+!.env.test
+
+# Vite
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
