--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check . && eslint .",
-		"format": "prettier --write ."
+		"format": "prettier --write .",
+		"turso:dev": "turso dev --db-file local.db",
+		"db:studio": "npx drizzle-kit studio",
+		"db:push": "npx drizzle-kit push",
+		"db:generate": "npx drizzle-kit generate",
+		"db:migrate": "npx tsx src/lib/db/migrate.ts"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.0.0",
@@ -18,6 +23,7 @@
 		"@types/eslint": "^8.56.7",
 		"autoprefixer": "^10.4.19",
 		"daisyui": "^4.12.10",
+		"drizzle-kit": "^0.23.0",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
@@ -33,5 +39,10 @@
 		"typescript-eslint": "^8.0.0-alpha.20",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@libsql/client": "^0.7.0",
+		"dotenv": "^16.4.5",
+		"drizzle-orm": "^0.32.0"
+	}
 }
