--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 	"type": "module",
 	"dependencies": {
 		"@libsql/client": "^0.7.0",
+		"axios": "^1.7.2",
 		"dotenv": "^16.4.5",
 		"drizzle-orm": "^0.32.0"
 	}
