--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"@libsql/client": "^0.7.0",
 		"axios": "^1.7.2",
 		"dotenv": "^16.4.5",
-		"drizzle-orm": "^0.32.0"
+		"drizzle-orm": "^0.32.0",
+		"zod": "^3.23.8"
 	}
 }
